--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node --env-file .env .",
+    "dev": "node --env-file .env.dev --watch .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
