--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node --env-file .env .",
-    "dev": "node --env-file .env.dev --watch .",
+    "dev": "node --env-file .env --watch .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
