--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
     "nanoid": "^5.0.8",
     "sequelize": "^6.37.5",
