--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --env-file .env .",
+    "start": "node --env-file .env --watch .",
     "dev": "node --env-file .env --watch .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
